# math-quiz-website

./: .env.example  .gitignore  AI_CONTEXT.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  DEVELOPMENT_LOG.md  GRADE_2_IMPLEMENTATION.md  GRADE_NUMBER_LIMITS.md  LICENSE  QUICKSTART.txt  README.md  REDUNDANCY_ANALYSIS.md  SERVER_STARTUP_GUIDE.md  SUBTRACTION_IMPLEMENTATION.md  TEST_PR.md  VERSION_CONTROL_GUIDE.md  requirements.txt
backend/: ADDING_NEW_GRADE.md  app.py  pyproject.toml  test_grades.py
backend/data/graphs/: README.md  chart_problems.csv
backend/data/word_problems/: addition_templates.csv  subtraction_templates.csv
backend/grades/: __init__.py  block_utils.py  grade_1.py  grade_2.py  grade_3.py  grade_4.py  grade_5.py  grade_6.py
frontend/: app.js  check-storage.html  clear-storage.html  diagnostic.html  firebase-debug.html  firebase-test.html  index.html  mobile_friendly_todo.md  style.css
